[package]
name = "kiwisdr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.4.18", features = ["derive"] }
ctrlc = "3.4.2"
futures-util = "0.3.30"
hound = "3.5.1"
log = "0.4.20"
regex = "1.10.3"
rubato = "0.14.1"
simple_logger = "4.3.3"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
url = "2.5.0"

